--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <a href="#" class="active">Home</a>
         
-        <a href="#">Service</a>
+        <a href="service.html">Service</a>
 
         <a href="#">Skills</a>
 
