added some webpages

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         
         <a href="service.html">Service</a>
 
-        <a href="#">Skills</a>
+        <a href="skill.html">Skills</a>
 
-        <a href="#">Education</a>
+        <a href="educ.html">Education</a>
 
-        <a href="#">Experience</a>
+        <a href="exp.html">Experience</a>
 
-        <a href="#">Contact</a>
+        <a href="cont.html">Contact</a>
 
     </nav>
 
@@ -74,7 +74,7 @@
 
 
 
-        <a href="#" class="btn">Hire me</a>
+        <a href="hireme.html" class="btn">Hire me</a>
 
     </div>
 
