--- a/service.html
+++ b/service.html
@@ -10,8 +10,8 @@
                  <h1>My Services</h1>
                   <nav> 
                     <ul> <li><a href="index.html">Home</a></li> 
-                        <li><a href="services.html">Services</a></li> 
-                        <li><a href="contact.html">Contact</a></li> 
+                        <li><a href="service.html">Services</a></li> 
+                        <li><a href="cont.html">Contact</a></li> 
                     </ul>
                  </nav> 
                 </header> 
